# turbocharged-csv-parser

./: README.md  composer.json  package-lock.json  package.json
app/Http/Controllers/: DashboardController.php  FinancialDataController.php
app/Models/: FinancialYearData.php
config/: app.php
csv-upload-server/: Cargo.toml
csv-upload-server/src/: errors.rs  lib.rs  main.rs
csv-upload-server/src/csv/: mod.rs
database/migrations/: 2024_06_17_183654_create_financial_year_data_table.php
resources/js/Components/: ApplicationLogo.jsx
resources/js/Layouts/: AuthenticatedLayout.jsx
resources/js/Pages/: Dashboard.jsx  FileUpload.jsx
resources/js/Pages/FinancialData/: Index.jsx
routes/: web.php
