[package]
name = "csv-upload-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
csv-async = { version = "1.3.0", features = ["tokio"] }
dotenvy = "0.15.7"
futures = "0.3.30"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "tls-rustls",
    "runtime-tokio",
    "mysql",
] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
